fix: slider spacing

--- a/sourse/pug/blocks/sCatalog/_sCatalog.scss
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.scss
@@ -73,10 +73,17 @@
   &__slider {
     overflow: visible;
     padding: rem(39) 0 rem(24);
+    margin-right: rem(-8);
+    --sp-x: #{rem(4)};
+    @include media-breakpoint-up(md) {
+      --sp-x: #{rem(25)};
+    }
     @include media-breakpoint-up(md) {
       // padding: rem(52) rem(17) rem(40);
       padding: rem(52) 0 rem(40);
-      margin: 0 rem(17);
+      // margin: 0 rem(17);
+      // margin-right: rem(-33);
+      // margin-right: -40px;
       overflow: hidden;
     }
     .swiper-slide {
@@ -85,12 +92,13 @@
       @include media-breakpoint-up(xl) {
         width: calc(100% / 3 - rem(50));
       }
-      &:not(:last-of-type) {
-        margin-right: rem(8);
-        @include media-breakpoint-up(md) {
-          margin-right: rem(50);
-        }
+      // &:not(:last-of-type) {
+      // margin-right: rem(8);
+      @include media-breakpoint-up(md) {
       }
+      margin-left: var(--sp-x);
+      margin-right: var(--sp-x);
+      // }
     }
   }
   .swiper-button-hand {
@@ -175,16 +183,16 @@
     .sCatalog__prod-wrap {
       position: relative;
       padding-block: rem(40);
-      &::before {
-        position: absolute;
-        content: "";
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: $white;
-        z-index: -1;
-      }
+      // &::before {
+      //   position: absolute;
+      //   content: "";
+      //   top: 0;
+      //   left: 0;
+      //   width: 100%;
+      //   height: 100%;
+      //   background-color: $white;
+      //   z-index: -1;
+      // }
       @include media-breakpoint-up(md) {
         padding-block: rem(60);
       }
